force-app/main/default/objects/KimbleOne__ResourcePayment__c/KimbleOne__ResourcePayment__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Resource Payment</label>
    <nameField>
        <label>Reference</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resource Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>