force-app/main/default/objects/KimbleOne__ResourcePayment__c/fields/KimbleOne__PaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PaymentAmount__c</fullName>
    <label>Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>