force-app/main/default/objects/KimbleOne__ResourcePayment__c/fields/KimbleOne__PaymentDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PaymentDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>